# domus

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  build-web  config.txt
include/baseline-ogdf/: drawer.hpp
include/config/: config.hpp
include/core/: csv.hpp  utils.hpp
include/core/graph/: attributes.hpp  cycle.hpp  file_loader.hpp  generators.hpp  graph.hpp  graphs_algorithms.hpp
include/core/tree/: tree.hpp
include/domus/config/: config.hpp
include/domus/core/: circular_sequence.hpp  color.hpp  config.hpp  containers.hpp  csv.hpp  domus_debug.hpp  memory_file.hpp  utils.hpp
include/domus/core/graph/: attributes.hpp  concept.hpp  cycle.hpp  embedding.hpp  file_loader.hpp  flow.hpp  generators.hpp  graph.hpp  graph_utilities.hpp  graphs_algorithms.hpp  graphs_algorithms.ipp  palm_tree.hpp  path.hpp  segment.hpp  subgraph.hpp  test.hpp
include/domus/core/tree/: tree.hpp  tree_algorithms.hpp
include/domus/drawing/: linear_scale.hpp  polygon.hpp  svg_drawer.hpp
include/domus/orthogonal/: area_compacter.hpp  drawing.hpp  drawing_builder.hpp  drawing_stats.hpp  equivalence_classes.hpp  loader.hpp
include/domus/orthogonal/shape/: clauses_functions.hpp  direction.hpp  node_type.hpp  shape.hpp  shape_builder.hpp  variables_handler.hpp
include/domus/planarity/: auslander_parter.hpp  drawing.hpp  embedding.hpp  interlacement.hpp  tutte.hpp
include/domus/sat/: cnf.hpp  sat.hpp
include/domus/torus/: bridge.hpp  embedder.hpp  type_4.hpp
include/drawing/: linear_scale.hpp  polygon.hpp  svg_drawer.hpp
include/orthogonal/: area_compacter.hpp  drawing_builder.hpp  drawing_stats.hpp  equivalence_classes.hpp
include/orthogonal/shape/: clauses_functions.hpp  shape.hpp  variables_handler.hpp
include/sat/: cnf_builder.hpp  glucose.hpp
src/: domus-web.cpp  domus.cpp  gen.cpp  main.cpp  stats.cpp  stats_ogdf.cpp  test_graphs.cpp  test_graphs.hpp
src/baseline-ogdf/: drawer.cpp
src/config/: config.cpp
src/core/: circular_sequence.cpp  color.cpp  config.cpp  containers.cpp  csv.cpp  domus_assert.hpp  domus_debug.hpp  utils.cpp
src/core/graph/: attributes.cpp  cycle.cpp  embedding.cpp  file_loader.cpp  flow.cpp  generators.cpp  graph.cpp  graph_utilities.cpp  graphs_algorithms.cpp  palm_tree.cpp  path.cpp  segment.cpp  segment.hpp  subgraph.cpp  test.cpp
src/core/tree/: tree.cpp  tree_algorithms.cpp
src/drawing/: linear_scale.cpp  polygon.cpp  svg_drawer.cpp
src/orthogonal/: area_compacter.cpp  drawing.cpp  drawing_builder.cpp  drawing_stats.cpp  equivalence_classes.cpp  equivalence_classes.hpp  file_loader.cpp  loader.cpp
src/orthogonal/shape/: clauses_functions.cpp  clauses_functions.hpp  direction.cpp  node_type.cpp  shape.cpp  shape_builder.cpp  variables_handler.cpp  variables_handler.hpp
src/planarity/: auslander_parter.cpp  drawing.cpp  embedding.cpp  interlacement.cpp  interlacement.hpp  segment.cpp  segment.hpp  tutte.cpp
src/sat/: cnf.cpp  cnf_builder.cpp  glucose.cpp  kissat.cpp  sat.cpp
src/sat/glucose/src/: Alg.h  Alloc.h  BoundedQueue.h  Clone.h  Dimacs.h  Heap.h  Map.h  ParseUtils.h  Queue.h  SimpSolver.cc  SimpSolver.h  Solver.cc  Solver.h  SolverStats.h  SolverTypes.h  Sort.h  System.cc  System.h  Vec.h  VecThreads.h  lcm.cc
src/torus/: bridge.cpp  bridge.hpp  decrease_face_type.cpp  decrease_face_type.hpp  embed_two_cycles.cpp  embed_two_cycles.hpp  embedder.cpp  faces.cpp  faces.hpp  faces_types.cpp  faces_types.hpp  next_type_establisher.cpp  next_type_establisher.hpp  splitting_paths.cpp  splitting_paths.hpp  type_3.cpp  type_3.hpp  type_4.cpp
